# Messenger

./: pyproject.toml
messanger/: run.py
messanger/src/app/: main.py
messanger/src/app/auth/: auth_service.py  auth_utils.py  dependencies.py  router.py  schemes.py
messanger/src/app/chat/chat_rooms/: chat_service.py
messanger/src/app/chat/chat_users/: chat_users_service.py  router.py  schemes.py
messanger/src/app/chat/message/: message_service.py  router.py  schemes.py
messanger/src/app/chat_rooms/: chat_service.py  router.py  schemes.py
messanger/src/app/chat_users/: chat_users_service.py  router.py
messanger/src/app/dao/: base.py
messanger/src/app/database/: __init__.py  base.py
messanger/src/app/exceptions/: base.py  chat_exceptions.py  user_exceptions.py
messanger/src/app/models/: chat_room.py  chat_users.py  message.py  timestamp.py  user.py
messanger/src/app/repositories/: chat_room_repository.py  chat_users_repository.py  message_repository.py  user_repository.py
messanger/src/app/websocket/: dependencies.py  manager.py  router.py
messanger/src/core/: auth_token_config.py  database_config.py
